unpackaged/main/default/objects/Lead/fields/Project_Owner_External__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_External__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner of project external to BD</description>
    <inlineHelpText>Account Name for owner of project external to BD, eg. Shell</inlineHelpText>
    <label>Project Owner (External)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (as Project Owner)</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>