unpackaged/main/default/objects/Lead/fields/Project_Source__c.field-meta.xml
<CustomField>
    <fullName>Project_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Project, external to BD, that is the source of this Lead.</description>
    <inlineHelpText>Project, external to BD, that is the source of this Lead, e.g. "Shell's LNG Project". When selected, auto-fills Site address from Project.</inlineHelpText>
    <label>Project Source</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>