unpackaged/main/default/objects/Lead/fields/Rank_EMS_Designated__c.field-meta.xml
<CustomField>
    <fullName>Rank_EMS_Designated__c</fullName>
    <label>Rank - EMS Designated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Select One</fullName>
                <default>true</default>
                <label>Select One</label>
            </value>
            <value>
                <fullName>A - High Priority</fullName>
            </value>
            <value>
                <fullName>B - Moderate Priority</fullName>
            </value>
            <value>
                <fullName>C - Low Priority</fullName>
            </value>
            <value>
                <fullName>Requested by Rep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>