unpackaged/main/default/objects/Lead/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <label>Sales Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>