unpackaged/main/default/objects/Lead/fields/Sales_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region_Code__c</fullName>
    <label>Sales Region Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>