unpackaged/main/default/objects/Lead/fields/Sales_Region_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Region(Look-up)</label>
    <referenceTo>Sales_Region__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>