unpackaged/main/default/objects/Lead/fields/SIC_Code__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code__c</fullName>
    <label>SIC Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry_Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SIC_Code</valueSetName>
    </valueSet>
</CustomField>