unpackaged/main/default/objects/Lead/fields/SIC_Code_Vanguard__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code_Vanguard__c</fullName>
    <description>Vanguard SIC Code field for populating the SIC Code and Description on Vanguard Accounts</description>
    <formula>TEXT( SIC_Code__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SIC Code Vanguard</label>
    <type>Text</type>
</CustomField>