unpackaged/main/default/objects/Lead/fields/SIC_Codes_Guide__c.field-meta.xml
<CustomField>
    <fullName>SIC_Codes_Guide__c</fullName>
    <description>SIC Codes Chart</description>
    <formula>HYPERLINK("https://bdgl.sharepoint.com/:x:/s/Playbook/EQyVVbTkEq9JtXcw6eTePjsBg0NwM5p-CV_Y1UhKfY94_Q?e=rGOlNl&amp;CID=8CF94A29-83F4-4B56-BBA5-715B6640631A&amp;wdLOR=c1D541F28-B2DE-46FE-A8DB-B8A7FEA77C21", "SIC Codes Guide")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Click here to view chart of SIC Codes, Industry and related Segment</inlineHelpText>
    <label>SIC Codes Guide</label>
    <type>Text</type>
</CustomField>