unpackaged/main/default/objects/Lead/fields/Site_Country_Formula__c.field-meta.xml
<CustomField>
    <fullName>Site_Country_Formula__c</fullName>
    <formula>IF(Opportunity_Country__c == 'US' ,"united states" ,Opportunity_Country__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Country Formula</label>
    <type>Text</type>
</CustomField>