unpackaged/main/default/objects/Lead/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>OLD - Street</label>
    <type>TextArea</type>
</CustomField>