unpackaged/main/default/objects/Lead/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <description>Region or quadrant where this lead resides or does business</description>
    <inlineHelpText>Region or quadrant where this lead resides or does business</inlineHelpText>
    <label>Territory</label>
    <length>50</length>
    <type>Text</type>
</CustomField>