unpackaged/main/default/objects/Lead/fields/Test_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Test_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Help Text</inlineHelpText>
    <label>Test Checkbox</label>
    <type>Checkbox</type>
</CustomField>