unpackaged/main/default/objects/Lead/fields/Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number__c</fullName>
    <description>Building ID from website - used</description>
    <inlineHelpText>Building ID from website - used</inlineHelpText>
    <label>Unit #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>