unpackaged/main/default/objects/Lead/fields/Unqualified_Lead_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Lead_Reason__c</fullName>
    <description>Indicate why this Lead has become Unqualified.</description>
    <inlineHelpText>Indicate why this Lead has become Unqualified.</inlineHelpText>
    <label>Unqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Bad Data</fullName>
                <label>Bad Data (incl Duplicate)</label>
            </value>
            <value>
                <fullName>Business Decision</fullName>
            </value>
            <value>
                <fullName>No Interest</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Project Cancelled</fullName>
            </value>
            <value>
                <fullName>Reputation</fullName>
            </value>
            <value>
                <fullName>Never any potential for a deal</fullName>
            </value>
            <value>
                <fullName>Bad contact information</fullName>
            </value>
            <value>
                <fullName>Worship Assembly Space</fullName>
            </value>
            <value>
                <fullName>Daycare</fullName>
            </value>
            <value>
                <fullName>Credit-360mobileoffice</fullName>
            </value>
            <value>
                <fullName>No Potential</fullName>
            </value>
            <value>
                <fullName>Other Inquiries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>