unpackaged/main/default/objects/Lead/fields/Vanguard_Department__c.field-meta.xml
<CustomField>
    <fullName>Vanguard_Department__c</fullName>
    <label>Vanguard Department</label>
    <length>100</length>
    <type>Text</type>
</CustomField>