unpackaged/main/default/objects/Lead/fields/Vanguard_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Vanguard_Lead_ID__c</fullName>
    <externalId>true</externalId>
    <label>Vanguard Lead ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>