unpackaged/main/default/objects/Lead/fields/Vanguard_State__c.field-meta.xml
<CustomField>
    <fullName>Vanguard_State__c</fullName>
    <formula>TEXT(StateCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vanguard State</label>
    <type>Text</type>
</CustomField>