unpackaged/main/default/objects/Lead/fields/VAPS_Interest__c.field-meta.xml
<CustomField>
    <fullName>VAPS_Interest__c</fullName>
    <description>Is the customer interested in any VAPS products?</description>
    <inlineHelpText>If the prospect/customer has a need for any VAPS products, select yes.</inlineHelpText>
    <label>VAPS Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>