unpackaged/main/default/objects/Lead/fields/Website_Source__c.field-meta.xml
<CustomField>
    <fullName>Website_Source__c</fullName>
    <description>Used to map which website a Lead is sourced from when creating Leads via Web-To-Lead</description>
    <inlineHelpText>Website that was used by customer to create Lead</inlineHelpText>
    <label>Website Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Website_Source</valueSetName>
    </valueSet>
</CustomField>