unpackaged/main/default/objects/Lead/fields/Website_URL__c.field-meta.xml
<CustomField>
    <fullName>Website_URL__c</fullName>
    <description>To track which page of the website the lead came from</description>
    <label>Website URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>