unpackaged/main/default/objects/Lead/fields/X360mobileoffice_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>X360mobileoffice_Request_ID__c</fullName>
    <externalId>true</externalId>
    <label>360mobileoffice Request ID</label>
    <length>7</length>
    <type>Text</type>
</CustomField>