unpackaged/main/default/objects/Lead/recordTypes/Approved_Lead.recordType-meta.xml
<RecordType>
    <fullName>Approved_Lead</fullName>
    <active>false</active>
    <businessProcess>Approved Lead Process</businessProcess>
    <label>Approved Lead</label>
</RecordType>