unpackaged/main/default/objects/Lead/recordTypes/BD_Lightning.recordType-meta.xml
<RecordType>
    <fullName>BD_Lightning</fullName>
    <active>true</active>
    <businessProcess>New Lead Process</businessProcess>
    <description>Lead Record for BD Lightning</description>
    <label>BD Lightning</label>
</RecordType>