unpackaged/main/default/objects/Lead/recordTypes/Vanguard.recordType-meta.xml
<RecordType>
    <fullName>Vanguard</fullName>
    <active>true</active>
    <businessProcess>New Lead Process</businessProcess>
    <label>Vanguard</label>
</RecordType>