unpackaged/main/default/objects/Lead/validationRules/country_name.validationRule-meta.xml
<ValidationRule>
    <fullName>country_name</fullName>
    <active>true</active>
    <description>Accept only full country name</description>
    <errorConditionFormula>NOT(
  OR(
   Opportunity_Country__c = "United States",
    Opportunity_Country__c= "Canada",
    Opportunity_Country__c= "Australia"
  )
)</errorConditionFormula>
    <errorDisplayField>Opportunity_Country__c</errorDisplayField>
    <errorMessage>Country must be United States, Canada, or Australia.</errorMessage>
</ValidationRule>