unpackaged/main/default/objects/Lead/validationRules/Dead_Lead_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Dead_Lead_Reason_Required</fullName>
    <active>true</active>
    <description>A reason is required if the lead is dead.</description>
    <errorConditionFormula>AND(
 RecordType.Name &lt;&gt; "Vanguard",
 ISPICKVAL(Status, 'Dead'),
 ISPICKVAL(Dead_Lead_Reason__c, '')
)</errorConditionFormula>
    <errorDisplayField>Dead_Lead_Reason__c</errorDisplayField>
    <errorMessage>A reason is required if the lead is dead.</errorMessage>
</ValidationRule>