unpackaged/main/default/objects/Lead/validationRules/First_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Required</fullName>
    <active>true</active>
    <description>The first name is required.</description>
    <errorConditionFormula>AND(
RecordType.Name &lt;&gt; "Vanguard",
ISBLANK(FirstName)
)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>The first name is required.</errorMessage>
</ValidationRule>