unpackaged/main/default/objects/Lead/validationRules/Industry_Details_Reqd.validationRule-meta.xml
<ValidationRule>
    <fullName>Industry_Details_Reqd</fullName>
    <active>true</active>
    <description>Used to manage values for the Industry and Industry Segment picklists</description>
    <errorConditionFormula>AND(
 RecordType.Name &lt;&gt; "Vanguard",
 ISPICKVAL(Industry_Segment__c, 'Other'),
 ISBLANK(Industry_Details__c)
)</errorConditionFormula>
    <errorDisplayField>Industry_Details__c</errorDisplayField>
    <errorMessage>Describe "Other" Industry and Industry Segment.</errorMessage>
</ValidationRule>