unpackaged/main/default/objects/Lead/validationRules/IndustryTitlePhone_Reqd_Convert.validationRule-meta.xml
<ValidationRule>
    <fullName>IndustryTitlePhone_Reqd_Convert</fullName>
    <active>true</active>
    <description>Ensures Industry and Phone is populated on Accounts created during Lead conversion and Title and Phone is populated on Contacts created during Lead conversion.</description>
    <errorConditionFormula>AND(
RecordType.Name &lt;&gt; "Vanguard",
OR(
ISBLANK(TEXT(Industry)),
ISBLANK(Title),
ISBLANK(Phone)),
OR(
TEXT(Status) = "Qualified",
TEXT(Status) = "Converted",
TEXT(Status) = "Working"),
RecordType.Name = "BD Lightning")</errorConditionFormula>
    <errorMessage>Enter Job Title, Industry and Company Phone.</errorMessage>
</ValidationRule>