unpackaged/main/default/objects/Lead/validationRules/Lead_Source_Detail_Reqd.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Source_Detail_Reqd</fullName>
    <active>true</active>
    <description>Used to manage values for the Lead Source picklist</description>
    <errorConditionFormula>AND(
RecordType.Name &lt;&gt; "Vanguard",
ISPICKVAL( LeadSource, "Other"), 
Lead_Source_Detail__c =""
)</errorConditionFormula>
    <errorDisplayField>Lead_Source_Detail__c</errorDisplayField>
    <errorMessage>Describe "Other" Lead Source.</errorMessage>
</ValidationRule>