unpackaged/main/default/objects/Lead/validationRules/Unqualified_Reason_Reqd.validationRule-meta.xml
<ValidationRule>
    <fullName>Unqualified_Reason_Reqd</fullName>
    <active>true</active>
    <description>A reason is required if the lead is Unqualified.</description>
    <errorConditionFormula>AND(
 ISPICKVAL(Status, 'Unqualified'),
 ISPICKVAL( Unqualified_Lead_Reason__c , ''),
 OR(RecordType.Name = "BD Lightning",RecordType.Name = "Vanguard")

)</errorConditionFormula>
    <errorDisplayField>Unqualified_Lead_Reason__c</errorDisplayField>
    <errorMessage>A reason is required if the lead is Unqualified.</errorMessage>
</ValidationRule>