unpackaged/main/default/objects/Lead/validationRules/Zip_Code_limit_length.validationRule-meta.xml
<ValidationRule>
    <fullName>Zip_Code_limit_length</fullName>
    <active>true</active>
    <description>Limit on length of zip code to remove junk leads</description>
    <errorConditionFormula>LEN(PostalCode )  &gt; 9</errorConditionFormula>
    <errorDisplayField>PostalCode</errorDisplayField>
    <errorMessage>Zip code exceeds allowed # of characters</errorMessage>
</ValidationRule>