unpackaged/main/default/objects/Lead/listViews/All_Dead_Unqualified_Leads.listView-meta.xml
<ListView>
    <fullName>All_Dead_Unqualified_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Dead_Lead_Reason__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Unqualified,Dead</value>
    </filters>
    <label>All Dead/Unqualified Leads</label>
</ListView>