unpackaged/main/default/objects/Lead/listViews/All_Leads2.listView-meta.xml
<ListView>
    <fullName>All_Leads2</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Dead_Lead_Reason__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>Vanguard_Lead_ID__c</columns>
    <columns>X360mobileoffice_Request_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Leads</label>
</ListView>