unpackaged/main/default/objects/Lead/listViews/All_Leads_MSS.listView-meta.xml
<ListView>
    <fullName>All_Leads_MSS</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>Branch_Name__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>Division__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>X360mobileoffice_Request_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Division__c</field>
        <operation>contains</operation>
        <value>MSS</value>
    </filters>
    <label>All Leads MSS</label>
    <sharedTo>
        <role>General_Manager_Marketing_Services</role>
    </sharedTo>
</ListView>