unpackaged/main/default/objects/Lead/listViews/All_Open_Leads2.listView-meta.xml
<ListView>
    <fullName>All_Open_Leads2</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Dead_Lead_Reason__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>Business_Line__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Qualified,Unqualified,Duplicate,Dead,Converted</value>
    </filters>
    <label>All Open Leads</label>
</ListView>