unpackaged/main/default/objects/Lead/listViews/All_WFS_Leads.listView-meta.xml
<ListView>
    <fullName>All_WFS_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branch_Name__c</field>
        <operation>equals</operation>
        <value>AUS Brisbane,AUS Melbourne,AUS Perth,AUS Sydney,Camps East,Camps US,Camps West,ES Colorado,ES Estevan,ES Fort St John,ES Grande Prairie,ES North Dakota,ES Texas</value>
    </filters>
    <label>All WFS Leads</label>
</ListView>