unpackaged/main/default/objects/Lead/listViews/Andrea_Leads_New_Training.listView-meta.xml
<ListView>
    <fullName>Andrea_Leads_New_Training</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>9/1/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>LEAD.STATE_CODE</field>
        <operation>equals</operation>
        <value>NB,NL,NS,ON,PE</value>
    </filters>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Website,360MobileOffice,Getable</value>
    </filters>
    <filters>
        <field>Opportunity_Country__c</field>
        <operation>notEqual</operation>
        <value>AU</value>
    </filters>
    <filters>
        <field>Handed_over_to_ASM__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Business_Line__c</field>
        <operation>notEqual</operation>
        <value>LodgeLinks,WFS,ES CA,ES US,AUS - Single Buildings,AUS - Multi-unit Complexes,AUS - Used Fleet,AUS - Custom Buildings,AUS - Modular Classrooms,AUS - Additional Services,AUS - Traditional Camps,AUS - Rapid Deployment Camps</value>
    </filters>
    <label>Andrea Leads - New - Training</label>
    <sharedTo>
        <group>All_BD_Users</group>
        <group>All_Vanguard</group>
        <roleAndSubordinatesInternal>General_Manager_Marketing_Services</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>