unpackaged/main/default/objects/Lead/listViews/AUS_Custom_Buildings_Lead.listView-meta.xml
<ListView>
    <fullName>AUS_Custom_Buildings_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>AUS - Custom Buildings</label>
    <queue>AUS_Custom_Buildings</queue>
    <sharedTo>
        <group>All_BD_Users</group>
    </sharedTo>
</ListView>