unpackaged/main/default/objects/Lead/listViews/AUS_Education_Lead.listView-meta.xml
<ListView>
    <fullName>AUS_Education_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Website_Source__c</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Unqualified,Dead,Qualified,Converted</value>
    </filters>
    <label>AUS Education Open Web Leads</label>
    <queue>AUS_Education</queue>
    <sharedTo>
        <group>All_BD_Users</group>
    </sharedTo>
</ListView>